--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/goodcity-for-charities.css">
+    <link rel="stylesheet" href="assets/browse.css">
 
     {{content-for "head-footer"}}
     <script type="text/javascript">
@@ -27,7 +27,7 @@
     {{content-for "body"}}
     <script src="cordova.js"></script>
     <script src="assets/vendor.js" integrity=""></script>
-    <script src="assets/goodcity-for-charities.js" integrity=""></script>
+    <script src="assets/browse.js" integrity=""></script>
 
     {{content-for "body-footer"}}
   </body>
