--- a/tests/index.html
+++ b/tests/index.html
@@ -11,7 +11,7 @@
     {{content-for "test-head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/goodcity-for-charities.css">
+    <link rel="stylesheet" href="assets/browse.css">
     <link rel="stylesheet" href="assets/test-support.css">
 
     {{content-for "head-footer"}}
@@ -24,7 +24,7 @@
     <script src="/testem.js" integrity=""></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
-    <script src="assets/goodcity-for-charities.js"></script>
+    <script src="assets/browse.js"></script>
     <script src="assets/tests.js"></script>
 
     {{content-for "body-footer"}}
