--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     {{content-for "body"}}
-    <script src="cordova.js"></script>
+    <!-- <script src="cordova.js"></script> -->
     <script src="assets/vendor.js" integrity=""></script>
     <script src="assets/browse.js" integrity=""></script>
 
