--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Goodcity for charities</title>
+    <title>GoodCity.HK for Charities</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+    <link rel="shortcut icon" type="image/png" href="icon-192x192.png">
+    <link rel="shortcut icon" sizes="192x192" href="icon-192x192.png">
+    <link rel="apple-touch-icon" href="icon-192x192.png">
 
     {{content-for "head"}}
 
@@ -13,15 +17,6 @@
     <link rel="stylesheet" href="assets/browse.css">
 
     {{content-for "head-footer"}}
-    <script type="text/javascript">
-      document.addEventListener("deviceready", onDeviceReady, false);
-
-      function onDeviceReady(){
-        StatusBar.overlaysWebView(false);
-        StatusBar.backgroundColorByName("black");
-        StatusBar.styleLightContent();
-      }
-    </script>
   </head>
   <body>
     {{content-for "body"}}
